...
                app:iconGravity="top"
                app:iconPadding="2dp"
                app:iconSize="24dp"
                app:iconTint="@color/home_accent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_task_fab"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/new_task"
...
