<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.si13.forgetty.HomeFragment"
        android:label="@string/home" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.si13.forgetty.ProfileFragment"
        android:label="@string/settings" />

    <fragment
        android:id="@+id/statsFragment"
        android:name="com.si13.forgetty.StatsFragment"
        android:label="@string/stats" />
</navigation>
